# Howitz

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  constraints.txt  dev-howitz.toml  howitz.dev.toml.example  howitz.min.toml.example  howitz.toml.example  pyproject.toml  requirements-frozen.txt  requirements.txt  tox.ini
.github/workflows/: publish-test-results.yml  test.yml
docs/source/: conf.py  endpoints-components.rst  howitz-gunicorn.service  howitz-gunicorn.socket  index.rst  install-on-debian.rst  troubleshooting-on-debian.rst
src/howitz/: __init__.py  __main__.py  endpoints.py  error_handlers.py  util.py  utils.py
src/howitz/config/: __init__.py  cache.py  cliargs.py  defaults.py  flask.py  howitz.py  log.py  models.py  utils.py  zino1.py
src/howitz/static/: main.css
src/howitz/templates/: base.html  event-details.html  event-list.html  event-status-update.html  event.html  events-table.html  hide-event-details.html  index.html  ui-collapse-row-btn.html  ui-event-actions-buttons.html  ui-event-attributes.html  ui-event-logs.html  ui-event-messages.html  ui-expand-row-btn.html  ui-generic-hidden.html  ui-hidden-li.html  ui-messages-radiogroup.html  ui-update-event-status-form.html
src/howitz/templates/delete/: event-list.html  event.html  ui-collapse-row-btn.html  ui-expand-row-btn.html
src/howitz/templates/includes/: configs.html  scripts.html  style.html  zino-logo.html
src/howitz/templates/layouts/: base.html
src/howitz/templates/responses/: 400-generic.html  403.html  404-not-found.html  502.html  bulk-update-events-status.html  checked-box.html  collapse-error-alert.html  collapse-row.html  error-banner.html  expand-error-alert.html  get-events-table.html  get-update-event-status-form.html  hide-update-event-status-form.html  hide-user-menu.html  remove-403-login.html  resort-events.html  row-toggle-select.html  show-user-menu.html  (+5 more)
src/howitz/users/: commands.py  db.py  model.py  utils.py
tests/: test_endpoints.py  test_init.py  test_users_db.py  test_users_model.py  test_users_utils.py
(+61 files in other folders)
