[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "howitz"
description = "blbl"
authors = [
    {name = "Hanne Moa", email = "hanne.moa@sikt.no"},
    {name = "Ilona Podliashanyk", email = "ilona.podliashanyk@sikt.no"},
]
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "flask",
    "flask_assets",
    "flask-login",
    "jinja2",
    "zinolib",
    "werkzeug",
]

[project.optional-dependencies]
docs = ["sphinx"]
